force-app/main/default/objects/collab_Canvas_State__c/collab_Canvas_State__c.object-meta.xml
<CustomObject>
    <description>Persists canvas state (objects, drawings) for collaborative canvas sessions. Each record represents one canvas identified by External_Id.</description>
    <label>Canvas State</label>
    <nameField>
        <displayFormat>CVS-{0000}</displayFormat>
        <label>Canvas State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canvas States</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>