force-app/main/default/objects/collab_Canvas_State__c/fields/collab_External_Id__c.field-meta.xml
<CustomField>
    <fullName>collab_External_Id__c</fullName>
    <description>Unique identifier for the canvas. Used to link canvas state to a specific context (e.g., record ID, custom identifier).</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>