force-app/main/default/objects/collab_Canvas_State__c/fields/collab_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>collab_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who last saved this canvas state.</description>
    <label>Last Modified By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Canvas States</relationshipLabel>
    <relationshipName>Canvas_States</relationshipName>
    <type>Lookup</type>
</CustomField>