force-app/main/default/objects/collab_Canvas_State__c/fields/collab_State_JSON__c.field-meta.xml
<CustomField>
    <fullName>collab_State_JSON__c</fullName>
    <description>JSON representation of all canvas objects including sticky notes, shapes, and drawing strokes.</description>
    <label>State JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>